# ha-bfe-rueckliefertarif

./: .gitignore  LICENSE  LOVELACE_LAYOUT_EXAMPLES.yaml  MIGRATION_NOTES_BB.md  README.md  SCHEMA_COVERAGE_ANALYSIS.md  VOLUME_BANDING_FINDINGS.md  hacs.json  info.md  pyproject.toml
.github/workflows/: release.yml  sync-strings.yml  validate.yml
custom_components/bfe_rueckliefertarif/: __init__.py  bfe.py  button.py  config_flow.py  const.py  coordinator.py  data_coordinator.py  ha_recorder.py  importer.py  manifest.json  presets.py  quarters.py  repairs.py  sensor.py  services.py  services.yaml  strings.json  tariff.py  tariffs_db.py
custom_components/bfe_rueckliefertarif/data/: tariffs.json
custom_components/bfe_rueckliefertarif/schemas/: tariffs-v1.schema.json
custom_components/bfe_rueckliefertarif/translations/: de.json  en.json  fr.json  it.json
custom_components/bfe_rueckliefertarif/www/: bfe-tariff-analysis-card.js
scripts/: sync_user_input_slugs.py
tests/: test_bfe_parse.py  test_config_flow.py  test_coordinator.py  test_data_coordinator.py  test_history.py  test_history_running_quarter_fallback.py  test_importer.py  test_presets.py  test_quarters.py  test_recompute_report.py  test_setup_and_options_flow.py  test_strings_user_inputs.py  test_tariff.py  test_tariffs_db.py
tests/fixtures/: monatspreise_sample.csv  quartalspreise_sample.csv
tools/: verify_quarters.sql
