[project]
name = "bfe-rueckliefertarif"
version = "0.23.0"
description = "Home Assistant integration for Swiss PV Rückliefertarif (Art. 15 EnFV)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "bfe-rueckliefertarif contributors" }]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    # >=0.13.243 bundles HA >= 2025.1.0 (HACS min); also gives us
    # OptionsFlowWithReload (HA 2024.11+).
    "pytest-homeassistant-custom-component>=0.13.243",
    "aioresponses>=0.7",
    "jsonschema>=4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]
# Swiss/German content uses these legitimately; not actually confusable
# with ASCII in this codebase. Avoids 87 RUF001/2/3 false positives.
allowed-confusables = ["–", "×", "ℹ", "−", "∪"]

[tool.ruff.lint.per-file-ignores]
# Test classes use mutable class defaults as fixture data and lowercase
# mock-class names (e.g. `class config:`) as Pydantic-style stubs.
"tests/**" = ["RUF012", "N801"]
